linter test fix

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </nav>
             <nav class="topnav" >
 
-                <img src="/images/New-York-Times-Logo.png" width="200px"  alt="NYT logo">
+                <img src="/images/New-York-Times-Logo.png" style="width:200px"  alt="NYT logo">
                 
             </nav>
             <nav class="toprightnav">
