linter fix 1st try

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <main>
         <article>
             <section class="text-title">
-                <p>By Dennis Overbye</p>
+                <h4>By Dennis Overbye</h4>
                 <p>March 17, 2014</p>
             </section>
             <section class="text">
@@ -116,7 +116,7 @@
                 <h4 class="inflation-left-top" >The Theory of Inflation</h4>
                 <span>Astronomers have found evidence to support the theory of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.</span>
             
-                <img id=inflation-photo src="/images/inflation-945.png" width="100%" alt="theory of Inflation">
+                <img id=inflation-photo src="/images/inflation-945.png"  alt="theory of Inflation">
                 <ul class="inflation-top">
                     <li><strong>THE UNIVERSE</strong>  is just under 14 billion years old. From our position in the Milky Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's a mystery. Wherever we look, the universe has an even temperature.</li>
                     <li><strong>NOT ENOUGH TIME</strong>  The universe is not old enough for light to have traveled the vast distance from one side of the universe to the other, and there has not been enough time for scattered patches of hot and cold to mix into an even temperature.</li>
@@ -131,7 +131,7 @@
                     <li><strong>EXPANSION</strong>  Returning to our coffee, imagine a single, central pot expanding faster than light and cooling to an even temperature as it expands. That is something like inflation. And the structure of the universe mirrors the froth and foam of the original pot.</li>
                 </ul>
                 <hr>
-                <figcaption class="inflation-left-bottom">By LARRY BUCHANAN and JONATHAN CORUM</figcaption>
+                <div class="inflation-left-bottom">By LARRY BUCHANAN and JONATHAN CORUM</div>
             </div>
 
             <section class="text">
@@ -148,7 +148,7 @@
             <br>
 
             <div>
-                <iframe  "
+                <iframe
                     src="https://www.youtube.com/embed/ZlfIVEy_YOA">
                 </iframe>
                 <figcaption>
@@ -238,7 +238,7 @@
             <hr>
             <hr>
             <br>
-            <img class="footer-logo" src="/images/New-York-Times-Logo.png" width="200px"  alt="NYT logo">
+            <img class="footer-logo" src="/images/New-York-Times-Logo.png" style="width:200px"  alt="NYT logo">
             <a class="footer-home" href="#">Go to Home Page</a>
 
         </div>
@@ -330,7 +330,7 @@
             <div class="line">
                 <ul class="line-bold">
                     <li class="li-nav-title">Subscribe</li>
-                    <li>Home Delivery</li>
+                    <li> Home Delivery</li>
                     <li>Digital Subscriptions</li>
                     <li>Games</li>
                     <li>Cooking</li>
@@ -339,7 +339,9 @@
                     <li>Email Newsletters</li>
                     <li>Corporate Subscriptions</li>
                     <li>Education Rate</li>
-                    <hr>
+                </ul>
+                <hr class="hr-footer">
+                <ul>
                     <li>Mobile Applications</li>
                     <li>Replica Edidion</li>
                     <li>International</li>
