--- a/index.html
+++ b/index.html
@@ -227,84 +227,84 @@
             <div>
                 <ul>
                     <li class="li-nav-title">news</li>
-                    <li>Home Page</li>
-                    <li>World</li>
-                    <li>Coronavirus</li>
-                    <li>U.S.</li>
-                    <li>Politics</li>
-                    <li>New York</li>
-                    <li>Business</li>
-                    <li>Tech</li>
-                    <li>Science</li>
-                    <li>Sports</li>
-                    <li>Obituaries</li>
-                    <li>Today's Paper</li>
-                    <li>Corrections</li>
+                    <li><a href="#">Home Page</a></li>
+                    <li><a href="#">World</a></li>
+                    <li><a href="#">Coronavirus</a></li>
+                    <li><a href="#">U.S.</a></li>
+                    <li><a href="#">Politics</a></li>
+                    <li><a href="#">New York</a></li>
+                    <li><a href="#">Business</a></li>
+                    <li><a href="#">Tech</a></li>
+                    <li><a href="#">Science</a></li>
+                    <li><a href="#">Sports</a></li>
+                    <li><a href="#">Obituaries</a></li>
+                    <li><a href="#">Today's Paper</a></li>
+                    <li><a href="#">Corrections</a></li>
                 </ul>
             </div>
             <div>
                 <ul>
                     <li class="li-nav-title">Opinion</li>
-                    <li>Today’s Opinion</li>
-                    <li>Op-Ed Columnists</li>
-                    <li>Editorials</li>
-                    <li>Op-Ed Contributors</li>
-                    <li>Letters</li>
-                    <li>Sunday Review</li>
-                    <li>Video: Opinion</li>
+                    <li><a href="#">Today’s Opinion</a></li>
+                    <li><a href="#">Op-Ed Columnists</a></li>
+                    <li><a href="#">Editorials</a></li>
+                    <li><a href="#">Op-Ed Contributors</a></li>
+                    <li><a href="#">Letters</a></li>
+                    <li><a href="#">Sunday Review</a></li>
+                    <li><a href="#">Video: Opinion</a></li>
                 </ul>
             </div>
             <div>
                 <ul>
                     <li class="li-nav-title">arts</li>
-                    <li>Today’s Arts</li>
-                    <li>Art & design</li>
-                    <li>Books</li>
-                    <li>Dance</li>
-                    <li>Movies</li>
-                    <li>Music</li>
-                    <li>Pop Culture</li>
-                    <li>Television</li>
-                    <li>Theater</li>
-                    <li>Video: Arts</li>
+                    <li><a href="#">Today’s Arts</a></li>
+                    <li><a href="#">Art & design</a></li>
+                    <li><a href="#">Books</a></li>
+                    <li><a href="#">Dance</a></li>
+                    <li><a href="#">Movies</a></li>
+                    <li><a href="#">Music</a></li>
+                    <li><a href="#">Pop Culture</a></li>
+                    <li><a href="#">Television</a></li>
+                    <li><a href="#">Theater</a></li>
+                    <li><a href="#">Video: Arts</a></li>
                 </ul>
             </div>
             <div>
                 <ul>
                     <li class="li-nav-title">living</li>
-                    <li>At Home</li>
-                    <li>Automobiles</li>
-                    <li>Games</li>
-                    <li>Education</li>
-                    <li>Food</li>
-                    <li>Health</li>
-                    <li>Jobs</li>
-                    <li>Love</li>
-                    <li>Magazine</li>
-                    <li>Parenting</li>
-                    <li>Real Estate</li>
-                    <li>Recipies</li>
-                    <li>Style</li>
-                    <li>T Magazine</li>
-                    <li>Travel</li>
+                    <li><a href="#">At Home</a></li>
+                    <li><a href="#">Automobiles</a></li>
+                    <li><a href="#">Games</a></li>
+                    <li><a href="#">Education</a></li>
+                    <li><a href="#">Food</a></li>
+                    <li><a href="#">Health</a></li>
+                    <li><a href="#">Jobs</a></li>
+                    <li><a href="#">Love</a></li>
+                    <li><a href="#">Magazine</a></li>
+                    <li><a href="#">Parenting</a></li>
+                    <li><a href="#">Real Estate</a></li>
+                    <li><a href="#">Recipies</a></li>
+                    <li><a href="#">Style</a></li>
+                    <li><a href="#">T Magazine</a></li>
+                    <li><a href="#">Travel</a></li>
                 </ul>
             </div>
             <div>
                 <ul>
                     <li class="li-nav-title">more</li>
-                    <li>Reader Center</li>
-                    <li>Wirecutter</li>
-                    <li>Live Events</li>
-                    <li>The Learning Network</li>
-                    <li>Tools & Services</li>
-                    <li>Multimedia</li>
-                    <li>Photography</li>
-                    <li>Video</li>
-                    <li>Newsletters</li>
-                    <li>TimesMachine</li>
-                    <li>NYT Store</li>
-                    <li>Times Journeys</li>
-                    <li>Manage My Account</li>
+                    <li><a href="#">Reader Center</a></li>
+                    <li><a href="#">Wirecutter</a></li>
+                    <li><a href="#">Live Events</a></li>
+                    <li><a href="#">The Learning Network</a></li>
+                    <li><a href="#">Tools & Services</a></li>
+                    <li><a href="#">Multimedia</a></li>
+                    <li><a href="#">Photography</a></li>
+                    <li><a href="#">Video</a></li>
+                    <li><a href="#">Newsletters</a></li>
+                    <li><a href="#">TimesMachine</a></li>
+                    <li><a href="#">NYT Store</a></li>
+                    <li><a href="#">Times Journeys</a></li>
+                    <li><a href="#">Manage My Account</a></li>
                     
                 </ul>
             </div>
@@ -323,12 +323,12 @@
                 </ul>
                 <hr class="hr-footer">
                 <ul>
-                    <li>Mobile Applications</li>
-                    <li>Replica Edidion</li>
-                    <li>International</li>
-                    <li>Canada</li>
-                    <li>Español</li>
-                    <li>中文网</li>
+                    <li><a href="#">Mobile Applications</a></li>
+                    <li><a href="#">Replica Edidion</a></li>
+                    <li><a href="#">International</a></li>
+                    <li><a href="#">Canada</a></li>
+                    <li><a href="#">Español</a></li>
+                    <li><a href="#">中文网</a></li>
                 </ul>
             </div>
         </div>
@@ -351,9 +351,6 @@
                 <li><a href="#">Subscriptions</a></li>
             </ul>
         </div>
-
-
-
     </footer>
 </body>
 </html>
