--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                 <hr>
                 <div class="social-master">
                     <ul class="social flex">
-                        <li><img class="social-logo" src="/images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
-                        <li><img class="social-logo" src="/images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
-                        <li><img class="social-logo" src="/images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
-                        <li><img class="social-logo" src="/images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
-                        <li><img class="social-logo" src="/images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
-                        <li><img class="social-logo" src="/images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
-                        <li><img class="social-logo" src="/images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
+                        <li><img class="social-logo" src="./images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
+                        <li><img class="social-logo" src="./images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
+                        <li><img class="social-logo" src="./images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
+                        <li><img class="social-logo" src="./images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
+                        <li><img class="social-logo" src="./images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
+                        <li><img class="social-logo" src="./images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
+                        <li><img class="social-logo" src="./images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
                     </ul>
                 </div>
             </div>
@@ -224,11 +224,11 @@
                 <div class="social-master flex">
                     <button class="big-buttons" type="button">READ 615 COMMENTS</button>
                     <ul class="social flex">
-                        <li><img class="social-logo" src="/images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
-                        <li><img class="social-logo" src="/images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
-                        <li><img class="social-logo" src="/images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
-                        <li><img class="social-logo" src="/images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
-                        <li><img class="social-logo" src="/images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
+                        <li><img class="social-logo" src="./images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
+                        <li><img class="social-logo" src="./images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
+                        <li><img class="social-logo" src="./images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
+                        <li><img class="social-logo" src="./images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
+                        <li><img class="social-logo" src="./images/baseline_facebook_black_18dp.png" alt="FB logo"></li>
                     </ul>
                 </div>
             </section>
