code review fix 7th try test1

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <header>
         <div id="outer-nav">
             <nav class="topleftnav flex float-left">
-                <img src="./images/menu.png" style="width:20px" alt="menu">
-                <img src="./images/magnifier.png" style="width:20px" alt="search">
+                <img class="pic-style-20" src="./images/menu.png" alt="menu">
+                <img class="pic-style-20" src="./images/magnifier.png" alt="search">
                 <a href="#">SPACE & COSMOS</a>
             </nav>
             <nav class="topnav" >
                 <a href="https://www.nytimes.com/">
-                    <img src="./images/New-York-Times-Logo.png" style="width:200px"  alt="NYT logo">
+                    <img class="pic-style-200" src="./images/New-York-Times-Logo.png" alt="NYT logo">
                 </a>
             </nav>
             <nav class="toprightnav float-right">
@@ -233,30 +233,124 @@
                 </div>
             </section>
         </div>
-        <div class="flex article-master">
-            <div class="article-buttons">
-                <img class="article-pic" src="./images/the-morning.png" alt="Daily the morning">
-                <button type="button">+</button>
-                <p>DAILY</p>
-                <h3>The Morning</h3>
-                <p>Make sense of the day's news and ideas. David Leonhardt and Times journalists guide you through what's happening - and why it matters.</p>
-                <a href="#">See the latest</a>
+
+        <br>
+        <div class="suggested">
+            <div class="flex article-master">
+                <div class="article-buttons">
+                    <img class="article-pic" src="./images/the-morning.png" alt="Daily the morning">
+                    <button type="button">+</button>
+                    <p>DAILY</p>
+                    <h3>The Morning</h3>
+                    <p>Make sense of the day's news and ideas. David Leonhardt and Times journalists guide you through what's happening - and why it matters.</p>
+                    <a href="#">See the latest</a>
+                </div>
+                <div class="article-buttons">
+                    <img class="article-pic" src="./images/breaking.png" alt="breaking news">
+                    <button type="button">+</button>
+                    <p>AS NEEDED</p>
+                    <h3>Breaking News</h3>
+                    <p>Alerts when important news break around the world.</p>
+                    <a href="#">See the latest</a>
+                </div>
+                <div class="article-buttons">
+                    <img class="article-pic" src="./images/nyt-at-home.png" alt="weekly at home">
+                    <button type="button">+</button>
+                    <h>WEEKLY</h>
+                    <h3>At Home</h3>
+                    <p>Our best suggestion for how to live a full cultured life during the pandemic, at home</p>
+                    <a href="#">See the latest</a>
+                </div>
             </div>
-            <div class="article-buttons">
-                <img class="article-pic" src="./images/breaking.png" alt="breaking news">
-                <button type="button">+</button>
-                <p>AS NEEDED</p>
-                <h3>Breaking News</h3>
-                <p>Alerts when important news break around the world.</p>
-                <a href="#">See the latest</a>
+            <br>
+            <div class="space-top">
+                <div class="flex space-row">
+                    <a class="space-article-tab" href="#">
+                        <div class="space-article">
+                            <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
+                            <figcaption class="article-author">Tingshu Wang/Reuters</figcaption>
+                            <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
+                            <h6 class="art-date">Nov. 24</h6>
+                        </div>
+                    </a>
+                    <a class="space-article-tab" href="#">
+                        <div class="space-article">
+                            <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
+                            <figcaption class="article-author">Tingshu Wang/Reuters</figcaption>
+                            <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
+                            <h6 class="art-date">Nov. 24</h6>
+                        </div>
+                    </a>
+                    <a class="space-article-tab" href="#">
+                        <div class="space-article">
+                            <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
+                            <figcaption class="article-author">Tingshu Wang/Reuters</figcaption>
+                            <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
+                            <h6 class="art-date">Nov. 24</h6>
+                        </div>
+                    </a>
+                </div>
+                <div class="flex space-row">
+                    <a class="space-article-tab" href="#">
+                        <div class="space-article">
+                            <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
+                            <figcaption class="article-author">Tingshu Wang/Reuters</figcaption>
+                            <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
+                            <h6 class="art-date">Nov. 24</h6>
+                        </div>
+                    </a>
+                    <a class="space-article-tab" href="#">
+                        <div class="space-article">
+                            <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
+                            <figcaption class="article-author">Tingshu Wang/Reuters</figcaption>
+                            <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
+                            <h6 class="art-date">Nov. 24</h6>
+                        </div>
+                    </a>
+                    <a class="space-article-tab" href="#">
+                        <div class="space-article">
+                            <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
+                            <figcaption class="article-author">Tingshu Wang/Reuters</figcaption>
+                            <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
+                            <h6 class="art-date">Nov. 24</h6>
+                        </div>
+                    </a>
+                </div>
+                                
             </div>
-            <div class="article-buttons">
-                <img class="article-pic" src="./images/nyt-at-home.png" alt="weekly at home">
-                <button type="button">+</button>
-                <p>WEEKLY</p>
-                <h3>At Home</h3>
-                <p>Our best suggestion for how to live a full cultured life during the pandemic, at home</p>
-                <a href="#">See the latest</a>
+            <div class="most-popular-list">
+                <hr>
+                <h5>Most popular</h5>
+                <h3 class="most-popular">
+                    <a href="#">5 Reader Comments Just Cost a News Website $124,000</a>
+                </h3>
+                <h3 class="most-popular">
+                    <a href="#">5 Reader Comments Just Cost a News Website $124,000</a>
+                </h3>
+                <h3 class="most-popular">
+                    <a href="#">5 Reader Comments Just Cost a News Website $124,000</a>
+                </h3>
+                <h3 class="most-popular">
+                    <a href="#">5 Reader Comments Just Cost a News Website $124,000</a>
+                </h3>
+                <h3 class="most-popular">
+                    <a href="#">5 Reader Comments Just Cost a News Website $124,000</a>
+                </h3>
+                <h3 class="most-popular">
+                    <a href="#">5 Reader Comments Just Cost a News Website $124,000</a>
+                </h3>
+                <h3 class="most-popular">
+                    <a href="#">5 Reader Comments Just Cost a News Website $124,000</a>
+                </h3>
+                <h3 class="most-popular">
+                    <a href="#">5 Reader Comments Just Cost a News Website $124,000</a>
+                </h3>
+                <h3 class="most-popular">
+                    <a href="#">5 Reader Comments Just Cost a News Website $124,000</a>
+                </h3>
+                <h3 class="most-popular">
+                    <a href="#">5 Reader Comments Just Cost a News Website $124,000</a>
+                </h3>
             </div>
         </div>
     </main>
@@ -264,9 +358,8 @@
     <footer>
         <div class="lower-logo-bar">
             <hr>
-            <hr>
             <br>
-            <img class="footer-logo float-left" src="./images/New-York-Times-Logo.png" style="width:200px"  alt="NYT logo">
+            <img class="pic-style-200" class="footer-logo float-left" src="./images/New-York-Times-Logo.png" alt="NYT logo">
             <a class="footer-home float-right" href="#">Go to Home Page</a>
 
         </div>
