code review fix 7th try test2

--- a/index.html
+++ b/index.html
@@ -67,9 +67,6 @@
                 <p>He was trying to understand why there was no trace of some exotic particles that should have been created in the Big Bang. Instead he discovered what might have made the universe bang to begin with. A potential hitch in the presumed course of cosmic evolution could have infused space itself with a special energy that exerted a repulsive force, causing the universe to swell faster than the speed of light for a prodigiously violent instant.</p>
                 <p>If true, the rapid engorgement would solve paradoxes like why the heavens look uniform from pole to pole and not like a jagged, warped mess. The enormous ballooning would iron out all the wrinkles and irregularities. Those particles were not missing, but would be diluted beyond detection, like spit in the ocean.</p>
                 <p>“SPECTACULAR REALIZATION,” Dr. Guth wrote across the top of the page and drew a double box around it.</p>
-
-                
-
             </section>
 
             <aside class="float-right">
@@ -256,7 +253,7 @@
                 <div class="article-buttons">
                     <img class="article-pic" src="./images/nyt-at-home.png" alt="weekly at home">
                     <button type="button">+</button>
-                    <h>WEEKLY</h>
+                    <p>WEEKLY</p>
                     <h3>At Home</h3>
                     <p>Our best suggestion for how to live a full cultured life during the pandemic, at home</p>
                     <a href="#">See the latest</a>
@@ -268,7 +265,7 @@
                     <a class="space-article-tab" href="#">
                         <div class="space-article">
                             <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
-                            <figcaption class="article-author">Tingshu Wang/Reuters</figcaption>
+                            <div class="article-author">Tingshu Wang/Reuters</div>
                             <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
                             <h6 class="art-date">Nov. 24</h6>
                         </div>
@@ -276,7 +273,7 @@
                     <a class="space-article-tab" href="#">
                         <div class="space-article">
                             <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
-                            <figcaption class="article-author">Tingshu Wang/Reuters</figcaption>
+                            <div class="article-author">Tingshu Wang/Reuters</div>
                             <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
                             <h6 class="art-date">Nov. 24</h6>
                         </div>
@@ -284,7 +281,7 @@
                     <a class="space-article-tab" href="#">
                         <div class="space-article">
                             <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
-                            <figcaption class="article-author">Tingshu Wang/Reuters</figcaption>
+                            <div class="article-author">Tingshu Wang/Reuters</div>
                             <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
                             <h6 class="art-date">Nov. 24</h6>
                         </div>
@@ -359,7 +356,7 @@
         <div class="lower-logo-bar">
             <hr>
             <br>
-            <img class="pic-style-200" class="footer-logo float-left" src="./images/New-York-Times-Logo.png" alt="NYT logo">
+            <img class="pic-style-200 footer-logo float-left" src="./images/New-York-Times-Logo.png" alt="NYT logo">
             <a class="footer-home float-right" href="#">Go to Home Page</a>
 
         </div>
