code review fix 7th try ok

--- a/index.html
+++ b/index.html
@@ -232,91 +232,91 @@
         </div>
 
         <br>
-        <div class="suggested">
-            <div class="flex article-master">
-                <div class="article-buttons">
-                    <img class="article-pic" src="./images/the-morning.png" alt="Daily the morning">
-                    <button type="button">+</button>
-                    <p>DAILY</p>
-                    <h3>The Morning</h3>
-                    <p>Make sense of the day's news and ideas. David Leonhardt and Times journalists guide you through what's happening - and why it matters.</p>
-                    <a href="#">See the latest</a>
+        <div class="flex">
+            <div class="suggested">
+                <div class="flex article-master">
+                    <div class="article-buttons">
+                        <img class="article-pic" src="./images/the-morning.png" alt="Daily the morning">
+                        <button type="button">+</button>
+                        <p>DAILY</p>
+                        <p>The Morning</p>
+                        <p>Make sense of the day's news and ideas. David Leonhardt and Times journalists guide you through what's happening - and why it matters.</p>
+                        <a href="#">See the latest</a>
+                    </div>
+                    <div class="article-buttons">
+                        <img class="article-pic" src="./images/breaking.png" alt="breaking news">
+                        <button type="button">+</button>
+                        <p>AS NEEDED</p>
+                        <p>Breaking News</p>
+                        <p>Alerts when important news break around the world.</p>
+                        <a href="#">See the latest</a>
+                    </div>
+                    <div class="article-buttons">
+                        <img class="article-pic" src="./images/nyt-at-home.png" alt="weekly at home">
+                        <button type="button">+</button>
+                        <p>WEEKLY</p>
+                        <p>At Home</p>
+                        <p>Our best suggestion for how to live a full cultured life during the pandemic, at home</p>
+                        <a href="#">See the latest</a>
+                    </div>
                 </div>
-                <div class="article-buttons">
-                    <img class="article-pic" src="./images/breaking.png" alt="breaking news">
-                    <button type="button">+</button>
-                    <p>AS NEEDED</p>
-                    <h3>Breaking News</h3>
-                    <p>Alerts when important news break around the world.</p>
-                    <a href="#">See the latest</a>
+                <br>
+                <div class="space-top">
+                    <div class="flex space-row">
+                        <a class="space-article-tab" href="#">
+                            <div class="space-article">
+                                <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
+                                <div class="article-author">Tingshu Wang/Reuters</div>
+                                <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
+                                <h6 class="art-date">Nov. 24</h6>
+                            </div>
+                        </a>
+                        <a class="space-article-tab" href="#">
+                            <div class="space-article">
+                                <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
+                                <div class="article-author">Tingshu Wang/Reuters</div>
+                                <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
+                                <h6 class="art-date">Nov. 24</h6>
+                            </div>
+                        </a>
+                        <a class="space-article-tab" href="#">
+                            <div class="space-article">
+                                <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
+                                <div class="article-author">Tingshu Wang/Reuters</div>
+                                <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
+                                <h6 class="art-date">Nov. 24</h6>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="flex space-row">
+                        <a class="space-article-tab" href="#">
+                            <div class="space-article">
+                                <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
+                                <figcaption class="article-author">Tingshu Wang/Reuters</figcaption>
+                                <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
+                                <h6 class="art-date">Nov. 24</h6>
+                            </div>
+                        </a>
+                        <a class="space-article-tab" href="#">
+                            <div class="space-article">
+                                <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
+                                <figcaption class="article-author">Tingshu Wang/Reuters</figcaption>
+                                <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
+                                <h6 class="art-date">Nov. 24</h6>
+                            </div>
+                        </a>
+                        <a class="space-article-tab" href="#">
+                            <div class="space-article">
+                                <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
+                                <figcaption class="article-author">Tingshu Wang/Reuters</figcaption>
+                                <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
+                                <h6 class="art-date">Nov. 24</h6>
+                            </div>
+                        </a>
+                    </div>
                 </div>
-                <div class="article-buttons">
-                    <img class="article-pic" src="./images/nyt-at-home.png" alt="weekly at home">
-                    <button type="button">+</button>
-                    <p>WEEKLY</p>
-                    <h3>At Home</h3>
-                    <p>Our best suggestion for how to live a full cultured life during the pandemic, at home</p>
-                    <a href="#">See the latest</a>
-                </div>
-            </div>
-            <br>
-            <div class="space-top">
-                <div class="flex space-row">
-                    <a class="space-article-tab" href="#">
-                        <div class="space-article">
-                            <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
-                            <div class="article-author">Tingshu Wang/Reuters</div>
-                            <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
-                            <h6 class="art-date">Nov. 24</h6>
-                        </div>
-                    </a>
-                    <a class="space-article-tab" href="#">
-                        <div class="space-article">
-                            <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
-                            <div class="article-author">Tingshu Wang/Reuters</div>
-                            <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
-                            <h6 class="art-date">Nov. 24</h6>
-                        </div>
-                    </a>
-                    <a class="space-article-tab" href="#">
-                        <div class="space-article">
-                            <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
-                            <div class="article-author">Tingshu Wang/Reuters</div>
-                            <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
-                            <h6 class="art-date">Nov. 24</h6>
-                        </div>
-                    </a>
-                </div>
-                <div class="flex space-row">
-                    <a class="space-article-tab" href="#">
-                        <div class="space-article">
-                            <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
-                            <figcaption class="article-author">Tingshu Wang/Reuters</figcaption>
-                            <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
-                            <h6 class="art-date">Nov. 24</h6>
-                        </div>
-                    </a>
-                    <a class="space-article-tab" href="#">
-                        <div class="space-article">
-                            <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
-                            <figcaption class="article-author">Tingshu Wang/Reuters</figcaption>
-                            <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
-                            <h6 class="art-date">Nov. 24</h6>
-                        </div>
-                    </a>
-                    <a class="space-article-tab" href="#">
-                        <div class="space-article">
-                            <img class="article-pic-lower" src="./images/china-rocket.jpg" alt="weekly at home">
-                            <figcaption class="article-author">Tingshu Wang/Reuters</figcaption>
-                            <h4 class="space-art-title">China Launches Moon Mission to Bring Back Lunar Rocks</h4>
-                            <h6 class="art-date">Nov. 24</h6>
-                        </div>
-                    </a>
-                </div>
-                                
             </div>
             <div class="most-popular-list">
-                <hr>
                 <h5>Most popular</h5>
                 <h3 class="most-popular">
                     <a href="#">5 Reader Comments Just Cost a News Website $124,000</a>
