code review fix 7th try ok

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     
     <main>
         <div>
-            <section class="text-title">
-                <h4>By Dennis Overbye</h4>
-                <p>March 17, 2014</p>
+            <section>
+                <h4 class="text-title">By Dennis Overbye</h4>
+                <p class="date">March 17, 2014</p>
             </section>
             <div class="text">
                 <p>CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the world of known physics.</p>
@@ -189,7 +189,7 @@
                 <p>Detecting those spirals required measuring infinitesimally small differences in the temperature of the microwaves. The group’s telescope, Bicep2, is basically a giant superconducting thermometer.</p>
                 <p>“We had no expectations what we would see,” Dr. Kovac said.</p>
                 <p>The strength of the signal surprised the researchers, and they spent a year burning up time on a Harvard supercomputer, making sure they had things right and worrying that competitors might beat them to the breakthrough.</p>
-                <p class="test-title">A Special Time</p>
+                <p class="text-title">A Special Time</p>
                 <p>The data traced the onset of inflation to a time that physicists like Dr. Guth, staying up late in his Palo Alto house 35 years ago, suspected was a special break point in the evolution of the universe.</p>
 
 
@@ -232,7 +232,7 @@
         </div>
 
         <br>
-        <div class="flex">
+        <div class="flex adv-space-most">
             <div class="suggested">
                 <div class="flex article-master">
                     <div class="article-buttons">
@@ -317,7 +317,7 @@
                 </div>
             </div>
             <div class="most-popular-list">
-                <h5>Most popular</h5>
+                <h5 class="most-title">Most popular</h5>
                 <h3 class="most-popular">
                     <a href="#">5 Reader Comments Just Cost a News Website $124,000</a>
                 </h3>
